# photocross

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: ccache.cmake  clang_tidy.cmake  compiler_flags.cmake  nautilus_extension.cmake  package.cmake
cmake/package/: photocross.desktop  slika.desktop
cmake/package/debian/: postinst  prerm
file_manager_integrations/: CMakeLists.txt
file_manager_integrations/nautilus/: CMakeLists.txt  entrypoint.cpp  executor.cpp  executor.h  nautilus_extension.cpp  nautilus_extension.h
resources/: icons.qrc  index.theme
resources/icon/: LICENSE
src/: busy_dialog.cpp  busy_dialog.h  command_line.cpp  command_line.h  comparison_settings.cpp  comparison_settings.h  comparison_view_layers.cpp  comparison_view_layers.h  drag_drop_helpers.cpp  file_helpers.cpp  file_helpers.h  image.cpp  image.h  image_diff.cpp  image_diff.h  image_difference.cpp  image_difference.h  image_helpers.cpp  image_helpers.h  main.cpp  screenshot.cpp  screenshot.h  screenshot_file_manager.cpp  screenshot_file_manager.h  screenshot_manager.cpp  screenshot_manager.h  session.cpp  session.h  settings.cpp  settings.h  slider_helpers.cpp  string_helpers.cpp  time_helpers.cpp  time_helpers.h  window.cpp  window.h
src/utility/: debounce.cpp  debounce.h  drag_drop.cpp  drag_drop.h  file.cpp  file.h  finally.h  image.cpp  image.h  signal_blocker.h  slider.cpp  slider.h  string_prefix.cpp  string_prefix.h  time.cpp
src/widgets/: color_picker.cpp  color_picker.h  comparison_settings.cpp  comparison_settings.h  comparison_settings.ui  comparison_settings_widget.cpp  comparison_settings_widget.h  comparison_settings_widget.ui  comparison_view.cpp  comparison_view.h  empty_image.cpp  empty_image.h  empty_image.ui  image_drop_widget.cpp  image_drop_widget.h  image_edit_menu.cpp  image_edit_menu.h  image_edit_menu.ui  image_view.cpp  image_view.h  image_view.ui  image_view_scene.cpp  image_view_scene.h  interactive_graphics_view.cpp  interactive_graphics_view.h  mouse_indicator.cpp  mouse_indicator.h  session_view.cpp  session_view.h  session_view.ui  single_direction_scroll_area.cpp  single_direction_scroll_area.h  source_image_view.cpp  source_image_view.h  source_images.cpp  source_images.h  synchronizable_graphics_view.cpp  synchronizable_graphics_view.h
src/windows/: main_window.cpp  main_window.h  main_window.ui
